adds profile mobile view

--- a/Profile.html
+++ b/Profile.html
@@ -7,7 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/DesktopView.css">
+    <link rel="stylesheet" href="./css/DesktopView.css">
+    <link rel="stylesheet" href="./css/MobileView.css">
     <title>Profile</title>
 </head>
 <body>
@@ -71,128 +72,147 @@
                 </p>
             </div> 
             </section>
-            <div class="right-left-resume">
-                <div class="resume-container-right">
-                <h3>Summary</h3>
-                    <div class="summary">
-                        <div class="bullet">
-                            <div class="circle">
-                            </div>
-                            <div class="box1">
-                            </div>
-                        </div>
-                        <div class="information-summary">
-                            <h4>Jastoni Villanueva</h4>
-                            <p class="summary-p">A 21-year old web developer currently studying at STI College Global City.</p>
-                            <ul class="summary-list">
-                                <li>North Signal Village, Taguig City</li>
-                                <li>09452272264</li>
-                                <li>vjastoni13@gmail.com</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <h3>Education</h3>
-                    <div class="education-div">
-                        <div class="bullet">
-                            <div class="circle">
-                            </div>
-                            <div class="box2">
-                            </div>
-
+                <div class="right-left-resume">
+                    <div class="resume-container-right">
+                    <h3>Summary</h3>
+                        <div class="summary">
                             <div class="bullet">
                                 <div class="circle">
                                 </div>
-                                <div class="box3">
+                                <div class="box1">
                                 </div>
                             </div>
-                        </div>
-                        <div class="information-summary">
-                            <h4>Army's Angels Integrated School</h4>
-                            <div class="box-year">
-                                <p>2013 - 2017</p>
+                            <div class="information-summary">
+                                <h4>Jastoni Villanueva</h4>
+                                <p class="summary-p">A 21-year old web developer currently studying at STI College Global City.</p>
+                                <ul class="summary-list">
+                                    <li>North Signal Village, Taguig City</li>
+                                    <li>09452272264</li>
+                                    <li>vjastoni13@gmail.com</li>
+                                </ul>
                             </div>
-                            <p>Elementary - Junior High School</p> 
+                        </div>
+                        <h3>Education</h3>
+                        <div class="education-div">
+                            <div class="bullet">
+                                <div class="circle">
+                                </div>
+                                <div class="box2">
+                                </div>
 
-                            <h4 class="sti">STI College Global City</h4>
-                            <div class="box-year">
-                                <p>2017 - Present</p>
+                                <div class="bullet">
+                                    <div class="circle">
+                                    </div>
+                                    <div class="box3">
+                                    </div>
+                                </div>
                             </div>
-                            <p>Senior High School - College</p>
+                            <div class="information-summary">
+                                <h4>Army's Angels Integrated School</h4>
+                                <div class="box-year">
+                                    <p>2013 - 2017</p>
+                                </div>
+                                <p>Elementary - Junior High School</p> 
+
+                                <h4 class="sti">STI College Global City</h4>
+                                <div class="box-year">
+                                    <p>2017 - Present</p>
+                                </div>
+                                <p>Senior High School - College</p>
+                            </div>
                         </div>
+                    </div>
+                    <div class="resume-container-left">
+                        <h3>Awards and Certificates</h3>
+                            <div class="awards">
+                                <div class="bullet">
+                                    <div class="circle">
+                                    </div>
+                                    <div class="box4">
+                                    </div>
+                                    <div class="circle">
+                                    </div>
+                                    <div class="box4">
+                                    </div>
+                                    <div class="circle">
+                                    </div>
+                                    <div class="box4">
+                                    </div>
+                                    <div class="circle">
+                                    </div>
+                                    <div class="box4">
+                                    </div>
+                                    <div class="circle">
+                                    </div>
+                                    <div class="box4">
+                                    </div>
+                                    <div class="circle">
+                                    </div>
+                                    <div class="box4">
+                                    </div>
+                                    <div class="circle">
+                                    </div>
+                                    <div class="box4">
+                                    </div>
+                                    <div class="circle">
+                                    </div>
+                                    <div class="box4">
+                                    </div>
+                                </div>
+                                <div class="certificates-col">
+                                    <h4 class="cert-label"> Academic Execellence</h4>
+                                    <div class="box-year-1">
+                                        <p>2017 - 2018</p>
+                                    </div>
+                                    <h4 class="cert-label">  With Honors</h4>
+                                    <div class="box-year-1">
+                                        <p>2018 - 2019</p>
+                                    </div>
+                                    <h4 class="cert-label">  Hackathon 2019</h4>
+                                    <div class="box-year-1">
+                                        <p>2019</p>
+                                    </div>
+                                    <h4 class="cert-label"> TVL and Computer Programming</h4>
+                                    <div class="box-year-1">
+                                        <p>2019</p>
+                                    </div>
+                                    <h4 class="cert-label"> CODEFEST Local Level 2019</h4>
+                                    <div class="box-year-1">
+                                        <p>2019</p>
+                                    </div>
+                                    <h4 class="cert-label"> CODEFEST Cluster Level 2019</h4>
+                                    <div class="box-year-1">
+                                        <p>2019</p>
+                                    </div>
+                                    <h4 class="cert-label"> SHS and College Week 2021</h4>
+                                    <div class="box-year-1">
+                                        <p>2021</p>
+                                    </div>
+                                    <h4 class="cert-label"> SAP Business One</h4>
+                                    <div class="box-year-1">
+                                        <p>2021</p>
+                                    </div>
+                                </div> 
+                            </div>
                     </div>
                 </div>
-                <div class="resume-container-left">
-                    <h3>Awards and Certificates</h3>
-                        <div class="awards">
-                            <div class="bullet">
-                                <div class="circle">
-                                </div>
-                                <div class="box4">
-                                </div>
-                                <div class="circle">
-                                </div>
-                                <div class="box4">
-                                </div>
-                                <div class="circle">
-                                </div>
-                                <div class="box4">
-                                </div>
-                                <div class="circle">
-                                </div>
-                                <div class="box4">
-                                </div>
-                                <div class="circle">
-                                </div>
-                                <div class="box4">
-                                </div>
-                                <div class="circle">
-                                </div>
-                                <div class="box4">
-                                </div>
-                                <div class="circle">
-                                </div>
-                                <div class="box4">
-                                </div>
-                                <div class="circle">
-                                </div>
-                                <div class="box4">
-                                </div>
-                            </div>
-                            <div class="certificates-col">
-                                <h4 class="cert-label"> Certificate of Recognition - Academic Execellence</h4>
-                                <div class="box-year-1">
-                                    <p>2017 - 2018</p>
-                                </div>
-                                <h4 class="cert-label"> Certificate of Recognition - With Honors</h4>
-                                <div class="box-year-1">
-                                    <p>2018 - 2019</p>
-                                </div>
-                                <h4 class="cert-label"> Certificate of Participation - Hackathon 2019</h4>
-                                <div class="box-year-1">
-                                    <p>2019</p>
-                                </div>
-                                <h4 class="cert-label"> Certificate of Recognition - TVL and Computer Programming</h4>
-                                <div class="box-year-1">
-                                    <p>2019</p>
-                                </div>
-                                <h4 class="cert-label"> Certificate of Participation - CODEFEST Local Level 2019</h4>
-                                <div class="box-year-1">
-                                    <p>2019</p>
-                                </div>
-                                <h4 class="cert-label"> Certificate of Participation - CODEFEST Cluster Level 2019</h4>
-                                <div class="box-year-1">
-                                    <p>2019</p>
-                                </div>
-                                <h4 class="cert-label"> Certificate of Participation - SHS and College Week 2021</h4>
-                                <div class="box-year-1">
-                                    <p>2021</p>
-                                </div>
-                                <h4 class="cert-label"> Certificate of Completion - SAP Business One</h4>
-                                <div class="box-year-1">
-                                    <p>2021</p>
-                                </div>
-                            </div> 
-                        </div>
+            </div>
+               <!-- Hamburger Menu For Mobile View-->
+          <div class="menu-wrap">
+            <input type="checkbox" class="toggler">
+            <div class="hamburger"><div></div></div>
+            <div class="menu">
+                <div>
+                    <div>
+                        <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="AboutMe.html">About Me</a></li>
+                            <li><a href="Profile.html">Profile</a></li>
+                            <li><a href="Project.html">Project</a></li>
+                            <li><a href="Certificates.html">Certificates</a></li>
+                            <li><a href="#Contacts">Contact</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
