--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             <li><a href="AboutMe.html">About Me</a></li>
                             <li><a href="Profile.html">Profile</a></li>
                             <li><a href="Project.html">Project</a></li>
-                            <li><a href="#Services">Certificates</a></li>
+                            <li><a href="Certificates.html">Certificates</a></li>
                             <li><a href="#Contacts">Contact</a></li>
                         </ul>
                     </div>
