adds carousel view in index html

--- a/index.html
+++ b/index.html
@@ -1,108 +1,226 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/DesktopView.css">
-    <link rel="stylesheet" href="css/MobileView.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/DesktopView.css" />
+    <link rel="stylesheet" href="css/MobileView.css" />
     <title>Portfolio</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <!-- Navigation Bar for Desktop -->
-        <div class="nav-bar-container">
-            <div class="profile">
-                <img class="profile-pic"src="./images/icon.PNG" alt="">
-                <h1 class="jas">Jastoni Villanueva</h1>
-                <div class="soc-med">
-                    <a href="https://twitter.com/vjast_" target="_blank"><div class="small-circle"><img class="icon" src="./images/twitter.svg" alt="twitter"></div></a>
-                    <a href="https://www.facebook.com/tjhayzz" target="_blank"><div class="small-circle"><img class="icon" src="./images/facebook.svg" alt="twitter"></div></a>
-                    <a href="https://www.instagram.com/vjast_/" target="_blank"><div class="small-circle"><img class="icon" src="./images/instagram.svg" alt="twitter"></div></a>
-                    <a href="https://discord.gg/4NRChBWK" target="_blank"><div class="small-circle"><img class="icon" src="./images/discord.svg" alt="twitter"></div></a>
-                    <a href="https://www.linkedin.com/in/jastoni-villanueva-8a257b234/" target="_blank"><div class="small-circle"><img class="icon" src="./images/linked.svg" alt="twitter"></div></a>
-                </div>
-            </div>
-            <div class="nav-bar">
-                <nav>
-                    <ul class="ul-nav-icon">
-                        <li>
-                            <a class="nav-links"href="index.html">
-                            <img  class="nav-icon" src="./images/home.svg" alt="home icon"> &nbsp; Home</a>
-                        </li>
-                        <li>
-                            <a class="nav-links"href="AboutMe.html">
-                            <img class="nav-icon" src="./images/user.svg" alt="user icon">  &nbsp; About Me</a>
-                        </li>
-                        <li>
-                            <a class="nav-links"href="Profile.html">
-                            <img class="nav-icon" src="./images/file.svg" alt="file icon"> &nbsp; Profile</a>
-                        </li>
-                        <li>
-                            <a class="nav-links"href="Project.html">
-                            <img class="nav-icon" src="./images/folder.svg" alt="folder icon"> &nbsp; Portfolio</a>
-                        </li>
-                        <li>
-                            <a class="nav-links"href="Certificates.html">
-                            <img class="nav-icon" src="./images/server.svg" alt="server icon" >  &nbsp;Certificates</a>
-                        </li>
-                        <li>
-                            <a class="nav-links"href="#Contacts">
-                            <img  class="nav-icon"src="./images/envelope.svg" alt="envelope icon" > &nbsp; Contact</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="creator-container">
-            <footer>
-                <p> © Web <span class="blue">Portfolio</span></p>
-                <p>Developed by <span class="blue">Jastoni Villanueva</span></p>
-            </footer>
-            </div>
+      <!-- Navigation Bar for Desktop -->
+      <div class="nav-bar-container">
+        <div class="profile">
+          <img class="profile-pic" src="./images/icon.PNG" alt="" />
+          <h1 class="jas">Jastoni Villanueva</h1>
+          <div class="soc-med">
+            <a href="https://twitter.com/vjast_" target="_blank"
+              ><div class="small-circle">
+                <img
+                  class="icon"
+                  src="./images/twitter.svg"
+                  alt="twitter"
+                /></div
+            ></a>
+            <a href="https://www.facebook.com/tjhayzz" target="_blank"
+              ><div class="small-circle">
+                <img
+                  class="icon"
+                  src="./images/facebook.svg"
+                  alt="twitter"
+                /></div
+            ></a>
+            <a href="https://www.instagram.com/vjast_/" target="_blank"
+              ><div class="small-circle">
+                <img
+                  class="icon"
+                  src="./images/instagram.svg"
+                  alt="twitter"
+                /></div
+            ></a>
+            <a href="https://discord.gg/4NRChBWK" target="_blank"
+              ><div class="small-circle">
+                <img
+                  class="icon"
+                  src="./images/discord.svg"
+                  alt="twitter"
+                /></div
+            ></a>
+            <a
+              href="https://www.linkedin.com/in/jastoni-villanueva-8a257b234/"
+              target="_blank"
+              ><div class="small-circle">
+                <img
+                  class="icon"
+                  src="./images/linked.svg"
+                  alt="twitter"
+                /></div
+            ></a>
+          </div>
         </div>
-        <div class="header-container">
-            <div class="typewriter-container">
-                <h1 class="title">CRAFTING THE BEST <br> ONLINE EXPERIENCE</h1>
-                <p class="line">Meet Jastoni Villanueva. A 21-year old web developer in <br> STI College Global City.</p>
-                <p class="works">Know More <button class="button">Recent Works</button></p>
-            </div>
-            <div class="image-container">
-                <img class="img-header"src="./images/3426526.jpg" alt="">
-            </div> 
+        <div class="nav-bar">
+          <nav>
+            <ul class="ul-nav-icon">
+              <li>
+                <a class="nav-links" href="index.html">
+                  <img
+                    class="nav-icon"
+                    src="./images/home.svg"
+                    alt="home icon"
+                  />
+                  &nbsp; Home</a
+                >
+              </li>
+              <li>
+                <a class="nav-links" href="AboutMe.html">
+                  <img
+                    class="nav-icon"
+                    src="./images/user.svg"
+                    alt="user icon"
+                  />
+                  &nbsp; About Me</a
+                >
+              </li>
+              <li>
+                <a class="nav-links" href="Profile.html">
+                  <img
+                    class="nav-icon"
+                    src="./images/file.svg"
+                    alt="file icon"
+                  />
+                  &nbsp; Profile</a
+                >
+              </li>
+              <li>
+                <a class="nav-links" href="Project.html">
+                  <img
+                    class="nav-icon"
+                    src="./images/folder.svg"
+                    alt="folder icon"
+                  />
+                  &nbsp; Portfolio</a
+                >
+              </li>
+              <li>
+                <a class="nav-links" href="Certificates.html">
+                  <img
+                    class="nav-icon"
+                    src="./images/server.svg"
+                    alt="server icon"
+                  />
+                  &nbsp;Certificates</a
+                >
+              </li>
+              <li>
+                <a class="nav-links" href="#Contacts">
+                  <img
+                    class="nav-icon"
+                    src="./images/envelope.svg"
+                    alt="envelope icon"
+                  />
+                  &nbsp; Contact</a
+                >
+              </li>
+            </ul>
+          </nav>
         </div>
-          <!-- Hamburger Menu For Mobile View-->
-          <div class="menu-wrap">
-            <input type="checkbox" class="toggler">
-            <div class="hamburger"><div></div></div>
-            <div class="menu">
-                <div>
-                    <div>
-                        <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="AboutMe.html">About Me</a></li>
-                            <li><a href="Profile.html">Profile</a></li>
-                            <li><a href="Project.html">Project</a></li>
-                            <li><a href="Certificates.html">Certificates</a></li>
-                            <li><a href="#Contacts">Contact</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+        <div class="creator-container">
+          <footer>
+            <p>© Web <span class="blue">Portfolio</span></p>
+            <p>
+              Developed by
+              <span class="blue">Jastoni Villanueva</span>
+            </p>
+          </footer>
         </div>
-        <!-- Carousel View -->
-        <div class="carousel-view">
-            <div class="carousel">
-                <figure>
-                    <img src="" alt="">
-                </figure>
+      </div>
+      <div class="header-container">
+        <div class="typewriter-container">
+          <h1 class="title">
+            CRAFTING THE BEST <br />
+            ONLINE EXPERIENCE
+          </h1>
+          <p class="line">
+            Meet Jastoni Villanueva. A 21-year old web developer in
+            <br />
+            STI College Global City.
+          </p>
+          <p class="works">
+            Know More
+            <a href="#carousel-wrapper">
+              <button class="button">Recent Works</button>
+            </a>
+          </p>
+        </div>
+        <div class="image-container">
+          <img class="img-header" src="./images/3426526.jpg" alt="" />
+        </div>
+      </div>
+      <!-- Hamburger Menu For Mobile View-->
+      <div class="menu-wrap">
+        <input type="checkbox" class="toggler" />
+        <div class="hamburger"><div></div></div>
+        <div class="menu">
+          <div>
+            <div>
+              <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="AboutMe.html">About Me</a></li>
+                <li><a href="Profile.html">Profile</a></li>
+                <li><a href="Project.html">Project</a></li>
+                <li><a href="Certificates.html">Certificates</a></li>
+                <li><a href="#Contacts">Contact</a></li>
+              </ul>
             </div>
-            <div class="footer-medias">
+          </div>
+        </div>
+      </div>
+      <!-- Carousel View -->
+      <div id="carousel-wrapper" class="carousel-view">
+        <span id="item-1"></span>
+        <span id="item-2"></span>
+        <span id="item-3"></span>
+        <span id="item-4"></span>
+        <span id="item-5"></span>
 
-            </div>
-        </div>   
+        <div class="carousel-item item-1">
+          <a href="#item-3" class="arrow-prev arrow"></a>
+          <img src="./projects/Diaeta.png" alt="" />
+          <a href="#item-2" class="arrow-next arrow"></a>
+        </div>
+
+        <div class="carousel-item item-2">
+          <a href="#item-1" class="arrow-prev arrow"></a>
+          <img src="./projects/RMS.png" alt="" />
+          <a href="#item-3" class="arrow-next arrow"></a>
+        </div>
+
+        <div class="carousel-item item-3">
+          <a href="#item-2" class="arrow-prev arrow"></a>
+          <img src="./projects/Basic Calculator.PNG" alt="" />
+          <a href="#item-4" class="arrow-next arrow"></a>
+        </div>
+
+        <div class="carousel-item item-4">
+          <a href="#item-3" class="arrow-prev arrow"></a>
+          <img src="./projects/Digiserve.PNG" alt="" />
+          <a href="#item-5" class="arrow-next arrow"></a>
+        </div>
+
+        <div class="carousel-item item-5">
+          <a href="#item-4" class="arrow-prev arrow"></a>
+          <img src="./projects/Data Com.png" alt="" />
+          <a href="#item-1" class="arrow-next arrow"></a>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
