adds partial changes to mobile view

--- a/index.html
+++ b/index.html
@@ -184,41 +184,42 @@
         </div>
       </div>
       <!-- Carousel View -->
-      <div id="carousel-wrapper" class="carousel-view">
-        <span id="item-1"></span>
-        <span id="item-2"></span>
-        <span id="item-3"></span>
-        <span id="item-4"></span>
-        <span id="item-5"></span>
+      <div>
+        <div id="carousel-wrapper" class="carousel-view">
+          <span id="item-1"></span>
+          <span id="item-2"></span>
+          <span id="item-3"></span>
+          <span id="item-4"></span>
+          <span id="item-5"></span>
+          <div class="carousel-item item-1">
+            <a href="#item-3" class="arrow-prev arrow"></a>
+            <img class="remove-space" src="./projects/Diaeta.png" alt="" />
+            <a href="#item-2" class="arrow-next arrow"></a>
+          </div>
 
-        <div class="carousel-item item-1">
-          <a href="#item-3" class="arrow-prev arrow"></a>
-          <img src="./projects/Diaeta.png" alt="" />
-          <a href="#item-2" class="arrow-next arrow"></a>
-        </div>
+          <div class="carousel-item item-2">
+            <a href="#item-1" class="arrow-prev arrow"></a>
+            <img src="./projects/RMS.png" alt="" />
+            <a href="#item-3" class="arrow-next arrow"></a>
+          </div>
 
-        <div class="carousel-item item-2">
-          <a href="#item-1" class="arrow-prev arrow"></a>
-          <img src="./projects/RMS.png" alt="" />
-          <a href="#item-3" class="arrow-next arrow"></a>
-        </div>
+          <div class="carousel-item item-3">
+            <a href="#item-2" class="arrow-prev arrow"></a>
+            <img src="./projects/Basic Calculator.PNG" alt="" />
+            <a href="#item-4" class="arrow-next arrow"></a>
+          </div>
 
-        <div class="carousel-item item-3">
-          <a href="#item-2" class="arrow-prev arrow"></a>
-          <img src="./projects/Basic Calculator.PNG" alt="" />
-          <a href="#item-4" class="arrow-next arrow"></a>
-        </div>
+          <div class="carousel-item item-4">
+            <a href="#item-3" class="arrow-prev arrow"></a>
+            <img class="resize" src="./projects/Digiserve.PNG" alt="" />
+            <a href="#item-5" class="arrow-next arrow"></a>
+          </div>
 
-        <div class="carousel-item item-4">
-          <a href="#item-3" class="arrow-prev arrow"></a>
-          <img src="./projects/Digiserve.PNG" alt="" />
-          <a href="#item-5" class="arrow-next arrow"></a>
-        </div>
-
-        <div class="carousel-item item-5">
-          <a href="#item-4" class="arrow-prev arrow"></a>
-          <img src="./projects/Data Com.png" alt="" />
-          <a href="#item-1" class="arrow-next arrow"></a>
+          <div class="carousel-item item-5">
+            <a href="#item-4" class="arrow-prev arrow"></a>
+            <img class="resize" src="./projects/Data Com.png" alt="" />
+            <a href="#item-1" class="arrow-next arrow"></a>
+          </div>
         </div>
       </div>
     </div>
