--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           </div>
         </div>
       </div>
-      <!-- Carousel View -->
+      <!-- Carousel Views -->
       <div>
         <div id="carousel-wrapper" class="carousel-view">
           <span id="item-1"></span>
