adds style to certificate mobile view

--- a/Certificates.html
+++ b/Certificates.html
@@ -3,21 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link
-      rel="preconnect"
-      href="https://fonts.gstatic.com"
-      crossorigin
-    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/DesktopView.css" />
+    <link rel="stylesheet" href="css/MobileView.css" />
     <title>Document</title>
   </head>
   <body>
@@ -43,9 +37,7 @@
                   alt="twitter"
                 /></div
             ></a>
-            <a
-              href="https://www.instagram.com/vjast_/"
-              target="_blank"
+            <a href="https://www.instagram.com/vjast_/" target="_blank"
               ><div class="small-circle">
                 <img
                   class="icon"
@@ -197,6 +189,25 @@
             src="./certificates/College Week 2021.png"
             alt="certificate"
           />
+        </div>
+      </div>
+      <!-- Hamburger Menu For Mobile View-->
+      <div class="menu-wrap">
+        <input type="checkbox" class="toggler" />
+        <div class="hamburger"><div></div></div>
+        <div class="menu">
+          <div>
+            <div>
+              <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="AboutMe.html">About Me</a></li>
+                <li><a href="Profile.html">Profile</a></li>
+                <li><a href="Project.html">Project</a></li>
+                <li><a href="Certificates.html">Certificates</a></li>
+                <li><a href="#Contacts">Contact</a></li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     </div>
